--- a/If_Else_Condition.html
+++ b/If_Else_Condition.html
@@ -22,7 +22,7 @@
             document.write("<h1>Good Morning...</h1>");
         }
 
-        else if (date >= 12 && date <= 18){
+        else if (date >= 12 && date < 18){
             document.write("<h1>Good Afternoon...</h1>");
         }
 
